# ISEP-SemanticWeb-Project

./: .gitignore  README.md  docker-compose.yaml  ex2.2.txt  ex2.3.xml  ingest.py  pyproject.toml
.github/: CONTRIBUTING.md  semantic.yml
app/: Dockerfile  chatbot.py  chunker.py  main.py  utils.py
app/backend/: README.md
app/frontend/: README.md  findCareers.html  findCourses.html  findPapers.html  index.html  mainMenu.html
data_jobs/: jobs.txt
knowledge_graph/: KG-HelperDoc.docx  Ontology-HelperDoc.docx
knowledge_graph/data/: README.md  careers.csv  cleaned_data.csv  courses.csv  courses.ttl  papers.ttl  papers_by_course.csv  unesco_topic_lookup.csv  unescothes.ttl
knowledge_graph/mappings/: README.md
knowledge_graph/ontology/: README.md  s2a-kg-ontology.rdf
knowledge_graph/quieries/: README.md
knowledge_graph/raw_data/: README.md  datacoursesMITEDU.csv
labs/: README.md
labs/lab01/: ex1.xml  ex2.xsd  ex3.html  ex3.xslt  ex4.sql  ex5.xml  ex5.xsd
labs/lab02/: ex1.txt  ex2.rdf  ex3.rdf  ex4.rdf  ex5.rdf
labs/lab03/: ex1.rdf  ex2.rdf  script_ex1.py
labs/lab04/: Academic_KG.ttl  Lab04-SPARQL.docx
labs/lab05/: 2_s2a_ontology.owl
scripts/: README.md  data_scrapper.ipynb
